; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_pages.c_pages_map_slow.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_pages.c_pages_map_slow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@os_page = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i64, i32*)* @pages_map_slow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pages_map_slow(i64 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = add i64 %12, %13
  %15 = load i64, i64* @os_page, align 8
  %16 = sub i64 %14, %15
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %8, align 8
  %18 = load i64, i64* %5, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %59

21:                                               ; preds = %3
  br label %22

22:                                               ; preds = %44, %21
  %23 = load i64, i64* %8, align 8
  %24 = load i64, i64* %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = call i8* @os_pages_map(i32* null, i64 %23, i64 %24, i32* %25)
  store i8* %26, i8** %10, align 8
  %27 = load i8*, i8** %10, align 8
  %28 = icmp eq i8* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %22
  store i8* null, i8** %4, align 8
  br label %59

30:                                               ; preds = %22
  %31 = load i8*, i8** %10, align 8
  %32 = ptrtoint i8* %31 to i64
  %33 = load i64, i64* %6, align 8
  %34 = call i64 @ALIGNMENT_CEILING(i64 %32, i64 %33)
  %35 = load i8*, i8** %10, align 8
  %36 = ptrtoint i8* %35 to i64
  %37 = sub i64 %34, %36
  store i64 %37, i64* %11, align 8
  %38 = load i8*, i8** %10, align 8
  %39 = load i64, i64* %8, align 8
  %40 = load i64, i64* %11, align 8
  %41 = load i64, i64* %5, align 8
  %42 = load i32*, i32** %7, align 8
  %43 = call i8* @os_pages_trim(i8* %38, i64 %39, i64 %40, i64 %41, i32* %42)
  store i8* %43, i8** %9, align 8
  br label %44

44:                                               ; preds = %30
  %45 = load i8*, i8** %9, align 8
  %46 = icmp eq i8* %45, null
  br i1 %46, label %22, label %47

47:                                               ; preds = %44
  %48 = load i8*, i8** %9, align 8
  %49 = icmp ne i8* %48, null
  %50 = zext i1 %49 to i32
  %51 = call i32 @assert(i32 %50)
  %52 = load i8*, i8** %9, align 8
  %53 = call i8* @PAGE_ADDR2BASE(i8* %52)
  %54 = load i8*, i8** %9, align 8
  %55 = icmp eq i8* %53, %54
  %56 = zext i1 %55 to i32
  %57 = call i32 @assert(i32 %56)
  %58 = load i8*, i8** %9, align 8
  store i8* %58, i8** %4, align 8
  br label %59

59:                                               ; preds = %47, %29, %20
  %60 = load i8*, i8** %4, align 8
  ret i8* %60
}

declare dso_local i8* @os_pages_map(i32*, i64, i64, i32*) #1

declare dso_local i64 @ALIGNMENT_CEILING(i64, i64) #1

declare dso_local i8* @os_pages_trim(i8*, i64, i64, i64, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @PAGE_ADDR2BASE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
